# acqnav

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.github/: codeql-config.yml  labeler.yml
.github/workflows/: ci.yml
acqnav/: __init__.py  __main__.py  cli.py  funding.py  gates.py  pathways.py  pilot_to_program.py  profile.py  readiness.py  report.py  requirements.py  transition.py
demos/: demo_01_ai_fusion_startup.py  demo_02_pathway_comparison.py  demo_03_transition_sensitivity.py  demo_04_color_of_money.py  demo_05_gate_tracker.py  demo_06_value_narrative.py  demo_07_report_export.py  demo_08_readiness_assessment.py  demo_09_full_navigator_walkthrough.py  run_all.py
docs/: CLI.md  CONCEPTS.md  PATHWAYS.md  SCOPE.md  TRANSITION_SCORING.md
tests/: test_cli.py  test_funding.py  test_gates.py  test_pathways.py  test_pilot_to_program.py  test_profile.py  test_readiness.py  test_report.py  test_requirements.py  test_scope_guard.py  test_transition.py
